[package]
name = "homeassistant-mpris-bridge-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.13.0", features = ["unstable", "attributes"]}
eyre = "0.6.12"
futures-util = "0.3.30"
mpris-server = "0.8.1"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "=1.37.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
